Second commit, admin pages

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,3 +22,11 @@ form {
 .achievement-title {
     margin-top: 2%;
 }
+
+.achievement-complete-title {
+    margin-top: 7%;
+}
+
+.game-container{
+    margin-top: 4%;
+}
